# language_app

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  main.py  old_template_README.md  pyproject.toml  skills-lock.json
.github/workflows/: deploy-dev.yml  deploy-main.yml  deploy.yml
apps/: language_app.py
apps/layouts/: language_app.grid.json
apps/public/: styles.css
apps/public/de/: cloze_word_choice_questions.json
apps/public/de_en/: questions.json  translations.yaml  (+2 more)
docs/: cloze_questions.md  cloze_word_rules.md  content_generation_rules.md  question_generation_common_rules.md  question_generation_overview.md  sentence_builder_rules.md  single_word_translation_rules.md  targeted_questions.md
docs/review_rules/: sentence_builder_review.md
implementation_plans/: family_filter_or_logic_plan.md  schema_simplification_plan.md  tag_canonicalization_master_checklist.md
plans/: sentence_builder_cleanup_backlog.md  sentence_builder_dataset_audit_plan.md  sentence_builder_execution_checklist.md  sentence_builder_step12_step14_plan.md  sentence_builder_tracking_guidance.md  sentence_builder_translation_cleanup_plan.md
plans/reports/: sentence_builder_accepted_inventory.json  sentence_builder_accepted_inventory.md  sentence_builder_audit_report.json  sentence_builder_audit_summary.md  sentence_builder_manual_review_log.md  smoke_sentence_builder_audit_report.json  smoke_sentence_builder_audit_summary.md
scripts/: audit_sentence_builder.py  build.sh  cleanup_sentence_builder.py  extract_cloze_translations.py  merge_cloze_translations.py  migrate_schema.py
(+26 files in other folders)
