[project]
name = "language-learning-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.21",
    "marimo>=0.21.1",
    "polars>=1.39.2",
    "traitlets>=5.14.3",
]

[dependency-groups]
dev = [
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.14.0",
    "ruff>=0.15.8",
    "ty>=0.0.29",
    "websockets>=16.0",
]
